# HRRLAB

./: README.md
3DoF Robot Control/: main.cpp
3DoF Robot Control/robot_tool/leg_3dof/: NumericalTool.h  SaveData.h  (+2 more)
ContactForceEstimation_LSTM/: Fx_Fy_Fz_ContactForceEstimation_LSTM.ipynb  Test_Model.ipynb
ContactForceEstimation_LSTM/BestData/: BestData1.ipynb
ContactForceEstimation_LSTM/DatasetCSV/: BestData1.csv  NewData.csv  Take30.csv  Take35.csv  Take36.csv  Take37.csv  TakeTest1_dataset.csv  TakeTest3_dataset.csv  TakeTest4_dataset.csv  TakeTest5_dataset.csv  TakeTest6_dataset.csv  TakeTest7_dataset.csv  TestData1.csv  TestData2.csv
ContactForceEstimation_LSTM/Weights/: Lstm_FxFyFz_take10_weights.pth  Lstm_FxFyFz_take11_weights.pth  Lstm_FxFyFz_take12_weights.pth  Lstm_FxFyFz_take13_weights.pth  Lstm_FxFyFz_take14_weights.pth  Lstm_FxFyFz_take15_weights.pth  Lstm_FxFyFz_take16_weights.pth  Lstm_FxFyFz_take17_weights.pth  Lstm_FxFyFz_take18_weights.pth  Lstm_FxFyFz_take19_weights.pth  Lstm_FxFyFz_take1_weights.pth  Lstm_FxFyFz_take2_weights.pth  Lstm_FxFyFz_take3_weights.pth  Lstm_FxFyFz_take4_weights.pth  Lstm_FxFyFz_take5_weights.pth  Lstm_FxFyFz_take6_weights.pth  Lstm_FxFyFz_take7_weights.pth  Lstm_FxFyFz_take8_weights.pth  Lstm_FxFyFz_take9_weights.pth
Python Socket Communication Code/: main.py
leg_3dof_controller/: CMakeLists.txt  package.xml
leg_3dof_controller/include/: leg_3dof_controller.h
leg_3dof_controller/include/Tools/: CMakeLists.txt  NumericalTool.h  PinocchioInterface.cpp  PinocchioInterface.hpp  RobotLeg.cpp  RobotLeg.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h  rqt_plot.h  stquad_enum.h
leg_3dof_controller/launch/: leg_3dof_controller.launch
leg_3dof_controller/src/: leg_3dof_controller.cpp  leg_3dof_controller_node.cpp
(+4 files in other folders)
